# evemu-remote-device-control

./: .gitignore  CMakeLists.txt  LICENSE
src/: Clipboard.cpp  Clipboard.h  Constants.h  DeviceControl.cpp  DeviceControl.h  EventLog.cpp  EventLog.h  EventsModel.cpp  EventsModel.h  File.cpp  File.h  Help.md  MouseEvent.h  Settings.cpp  Settings.h  main.cpp
src/qml/: Device.qml  EventLog.qml  FrameLabel.qml  HelpDialog.qml  MainWindow.qml  RDCUI.qml  SettingsDialog.qml  TextFieldSetting.qml
